# ED-AFK

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  launch.ps1
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-25-procedure-interpreter.md
docs/superpowers/specs/: 2026-05-25-procedure-interpreter-design.md
projects/ed-autojump/: .gitignore  README.md  SPEC.md  _escape_test.txt  _t.txt  config.toml  pyproject.toml
projects/ed-autojump/calibration/: README.md  overnight-runbook.md
projects/ed-autojump/procedures/: arrival.toml  honk.toml  smack_recovery.toml  startup.toml
projects/ed-autojump/scripts/: audio_probe.py  ed-afk-nightly.xml  nightly-run.ps1
projects/ed-autojump/src/ed_autojump/: __init__.py  anonymizer.py  binds_tool.py  cli.py  config.py  doctor.py  orchestrator.py  panic.py  panic_listener.py  recorder.py  session_audit.py  state.py
projects/ed-autojump/src/ed_autojump/archive/: __init__.py
projects/ed-autojump/src/ed_autojump/archive/brightness/: __init__.py  sun_avoid.py
projects/ed-autojump/src/ed_autojump/binds/: ED-AFK.4.2.binds
projects/ed-autojump/src/ed_autojump/data/: fsd_modules.json
projects/ed-autojump/src/ed_autojump/docking/: __init__.py  docking.py
projects/ed-autojump/src/ed_autojump/eddn/: __init__.py  publisher.py
projects/ed-autojump/src/ed_autojump/executor/: __init__.py  align.py  dss.py  escape.py  fss.py  honk.py  jump.py  navpanel.py  orbit_escape.py  refuel.py  runner.py  scoop.py  smack_recovery.py
projects/ed-autojump/src/ed_autojump/flow/: __init__.py  context.py  dispatcher.py  interpreter.py  loader.py  model.py  steps.py
projects/ed-autojump/src/ed_autojump/fsd/: __init__.py  danger.py  math.py
projects/ed-autojump/src/ed_autojump/hud/: __init__.py  calibration.py  detect.py  graphics_override.py
projects/ed-autojump/src/ed_autojump/journal/: __init__.py  events.py  tail.py  waiters.py
projects/ed-autojump/src/ed_autojump/keys/: __init__.py  binds.py  scancodes.py  sender.py
projects/ed-autojump/src/ed_autojump/launcher/: __init__.py  audio_wait.py  flow.py  focus.py  launcher.py  menu_nav.py  wizard.py
projects/ed-autojump/src/ed_autojump/planner/: __init__.py  filter.py  spansh.py
projects/ed-autojump/src/ed_autojump/status/: __init__.py  navroute.py  status.py
projects/ed-autojump/src/ed_autojump/vision/: __init__.py  capture.py  compass.py  cyan_reader.py  opencv_reader.py  reader.py  ultralytics_reader.py  yolo.py
projects/ed-autojump/src/ed_autojump/vision/model/: SOURCE.md
projects/ed-autojump/tests/: conftest.py  test_align.py  test_anonymizer.py  test_audio_wait.py  test_binds_coverage.py  test_binds_tool.py  test_calibrate_ring.py  test_capture.py  test_cli_flow.py  test_cli_record.py  test_cli_smoke.py  test_compass_escape.py  test_compass_geometry.py  test_composite_reader.py  test_config.py  test_config_launcher.py  test_config_vision.py  test_cyan_reader.py  test_docking.py  test_doctor.py  test_dss.py  test_eddn.py  test_escape.py  test_fsd_math.py  test_fss.py  test_honk.py  test_hud.py  test_journal_events.py  test_journal_waiters.py  test_jump_macros.py  test_keys.py  test_launch_flow.py  test_launcher.py  test_letterbox.py  test_loadout_sanity.py  test_menu_nav.py  test_navpanel.py  test_opencv_reader.py  test_orbit_escape.py  test_orchestrator.py  (+25 more)
projects/ed-autojump/tests/fixtures/sessions/: clean_route.jsonl  danger_engagement.jsonl  fuel_starved.jsonl  hull_damage.jsonl
projects/ed-autojump/tests/flow/: __init__.py  test_context.py  test_dispatcher.py  test_integration.py  test_interpreter.py  test_loader.py  test_model.py  test_procedure_files.py  test_steps_engage.py  test_steps_events.py  test_steps_simple.py  test_steps_vision.py
